fix pre tag overflow bug.

--- a/client/src/assets/styles/card.scss
+++ b/client/src/assets/styles/card.scss
@@ -75,6 +75,9 @@
     }
 
     pre {
+        white-space: pre-wrap;
+        // word-wrap:break-word;
+        // word-break: break-all;
         margin: 0.5rem 0;
         padding: 0.5rem;
         background-color: #f8f8f8;
